# lab-playground

./: .gitignore
conical_helix_length/: README.MD  cal_helix_len.py
inelastic_collision/: README.MD  a.out  main.cpp  readme  sim
monty_hall/: monty_hall_sim.py
secretary_stop_problem/: experiment.py
vibe-coded-projects/personal-ops-cli/: README.md  pyproject.toml
vibe-coded-projects/personal-ops-cli/data/: ops_data.json
vibe-coded-projects/personal-ops-cli/src/personal_ops_cli/: __init__.py  cli.py  storage.py
vibe-coded-projects/personal-ops-cli/tests/: test_smoke.py
vibe-coded-projects/poly-cli/: README.md  polymarket_dashboard.py  polymarket_dashboard.rs
