[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ops-cli"
version = "0.1.0"
description = "Personal productivity CLI for notes, todos, and focus timers"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
ops = "personal_ops_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

